CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(LEETCODE_SQRT_X)

SET(CMAKE_VERBOSE_MAKEFILE OFF)
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
SET(CMAKE_CXX_FLAGS "-g -pipe -W -Wall -fPIC -std=c++11")

INCLUDE_DIRECTORIES(
    "."
)

LINK_DIRECTORIES(
)

IF (class STREQUAL hl)
    ADD_DEFINITIONS(-DHL=1)
    SET(SRC_LIST main.cpp sqrt_x_hl.hpp)
ENDIF()
IF (class STREQUAL pj)
    ADD_DEFINITIONS(-DPJ=1)
    SET(SRC_LIST main.cpp sqrt_x_pj.hpp)
ENDIF()
IF (class STREQUAL inv)
    ADD_DEFINITIONS(-DINV=1)
    SET(SRC_LIST main.cpp sqrt_x_inv.hpp)
ENDIF()

ADD_EXECUTABLE(sqrt_x ${SRC_LIST})
